# practice_code

./: .gitignore
.github/workflows/: ci-test.yml  main.yml
cpp_examples/: CMakeLists.txt
cpp_examples/include/: hello_world.h
cpp_examples/src/: hello_world.cpp  main.cpp
cpp_examples/tests/: hello_test.cc
